updated versions Geb, Selenium, Firefox driver, and others